--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,5 +207,79 @@ body::-webkit-scrollbar {
 /* 採用情報 */
 .recruit-container {
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.recruit-top {
+    width: 80vw;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.green-big-btn a {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    height: 1.5rem;
+    padding: 3.5rem 7rem;
+    background-color: #089416;
+    position: relative;
+}
+
+.green-big-btn a h2 {
+    color: white;
+    opacity: 50%;
+    font-size: 4rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.green-big-btn a span {
+    display: block;
+    color: white;
+    font-size: 2.5rem;
+}
+
+/* 写真流れる */
+.slider {
+    width: 80vw;
+    overflow: hidden;
+  }
+
+  .slider-track {
+    display: flex;
+    animation: scroll 20s linear infinite;
+  }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  .slider-track img {
+    width: 25vw;
+    height: auto;
+    margin-right: 10px;
+  }
+
+
+  /* フッター */
+footer {
+    width: 100vw;
+    height: 80vh;
+    background-color: #089416;
+    
+}
+
+
+
